# morse

./: LICENSE  Makefile  Makefile.in  README  config.h.in  configure  configure.in  morse.html  morse.tab  morse.txt  morsercv  morsercv.c  morsercv.c.buf  morsesend  morsesend.c
